@@ -10,7 +10,7 @@
         {
             "timestamp": "2017-05-09T15:04:05.999999Z",
             "exception": {
-                "message": "SyntaxError: Something!"
+                "message": ""
             }
         }
     ]
