@@ -4,7 +4,9 @@
   fields:
     - name: error
       type: group
+      dynamic: false
       fields:
+
         - name: id
           type: keyword
           description: >
@@ -17,13 +19,14 @@
         - name: checksum
           type: keyword
           description: >
-            Checksum of the logged error for use in grouping
+            Checksum of the logged error for use in grouping.
 
         - name: exception
           type: group
           description: >
             Information about the originally thrown error.
           fields:
+
             - name: code
               type: keyword
               description: The error code set when the error happened, e.g. database error code.
@@ -36,12 +39,6 @@
               type: keyword
               description: The module namespace of the original error.
 
-            - name: attributes
-              type: object
-              enabled: false
-              description: >
-                Arbitrary properties related to the original error.
-
             - name: type
               type: keyword
 
@@ -49,18 +46,13 @@
               type: boolean
               description: Indicator whether the error was caught somewhere in the code or not.
 
-            - name: stacktrace
-              type: array
-              enabled: false
-              description: >
-                The stacktrace at the time when the original error occured. The stacktrace contains a list of frames describing the context of the specific frames.
-
 
         - name: log
           type: group
           description: >
             Additional information added by logging the error.
           fields:
+
             - name: level
               type: keyword
               description: The severity of the record.
@@ -76,10 +68,4 @@
             - name: param_message
               type: keyword
               description: Equal to message, but with placeholders replaced.
-
-            - name: stacktrace
-              type: array
-              enabled: false
-              description: >
-                The stacktrace at the time when the error was logged. The stacktrace contains a list of frames describing the context of the specific frames.
 
